Renamed section search to "search"

--- a/a/head.html
+++ b/a/head.html
@@ -29,15 +29,15 @@
 				<a href="/learn/">Learn</a>
 				<a href="/dev/">Create</a>
 				<nav>
-					<a href="/dev/list/">List</a>
 					<a href="/dev/new/">New</a>
 					<a href="/dev/docs/">Docs</a>
+					<a href="/dev/search/">Search</a>
 				</nav>
 				<a href="/qa/">Q&amp;A</a>
 				<nav>
-					<a href="/qa/tag/">Tags</a>
 					<a href="/qa/ask">Ask</a>
 					<a href="/qa/docs/">Tips</a>
+					<a href="/qa/search/">Search</a>
 				</nav>
 				<a href="/chat/">Chat</a>
 				<a href="/login/">Login</a>
