Fixed spelling errors (thru -> through)

--- a/learn/web/web.html
+++ b/learn/web/web.html
@@ -170,8 +170,8 @@
 			</div>
 			<line class="cline bump-up" />
 			<div class="course">
-				<a>Loop thru elements</a>
-				<div class="description">Learn about NodeLists and how to loop thru elements.</div>
+				<a>Loop through elements</a>
+				<div class="description">Learn about NodeLists and how to loop through elements.</div>
 			</div>
 			<line class="cline" />
 			<div class="course">
