--- a/qa/ask.html
+++ b/qa/ask.html
@@ -2,7 +2,7 @@
 <form id="form" onsubmit="javascript:!arguments[0].preventDefault() &amp;&amp; formSubmit()" method="post" action="preview">
 	<aside class="rit">
 		<h2>Writing a good title</h2>
-		<p>Your question's title is the first thing seen by readers skimming thru questions both here and on search engines. A title should try to efficiently capture the essence of the question. Try to avoid titles like:</p>
+		<p>Your question's title is the first thing seen by readers skimming through questions both here and on search engines. A title should try to efficiently capture the essence of the question. Try to avoid titles like:</p>
 		<ul>
 			<li><strong>"Is it possible to…"</strong> (you want to know <em>how</em> to do something)</li>
 			<li><strong>X in [some language]</strong> (what about <em>X</em>?)</li>
@@ -36,7 +36,7 @@
 	</fieldset>
 	<aside id="explainhelp" class="rit" hidden="">
 		<h2>Explaining your problem</h2>
-		<p>In the description box, you want to describe your problem in detail. <em>Include any information needed to setup the environment, replicate the bug, or observe the problematic behavior.</em> Be <strong>clear</strong> about what exactly you did, struggled with, and would like us to help with. The core question box is for your specific request <em>in one well-written sentence</em>, for example "How can I flow foo thru bar?".</p>
+		<p>In the description box, you want to describe your problem in detail. <em>Include any information needed to setup the environment, replicate the bug, or observe the problematic behavior.</em> Be <strong>clear</strong> about what exactly you did, struggled with, and would like us to help with. The core question box is for your specific request <em>in one well-written sentence</em>, for example "How can I flow foo through bar?".</p>
 	</aside>
 	<fieldset id="step2" class="hidden">
 		<h2>Question Body</h2>
