Fixed XHTML err on 'where active' on user page

--- a/user/userlist.html
+++ b/user/userlist.html
@@ -11,7 +11,7 @@
 	</select>
 	Where the user <select id="where" name="where">
 		<option value="none">Is anybody</option>
-		<option value="actv">Is active</option>
+		<option value="bactv">Is active</option>
 		<option value="mod">Is a mod</option>
 		<option value="new">Joined today</option>
 		<option value="lowrep">&lt; 10 reputation</option>
