--- a/chat/room.html
+++ b/chat/room.html
@@ -41,7 +41,6 @@ $textarea
 		ctrlsFlag = document.createElement('a'),
 		source = {},
 		editing = false,
-		hashchangeready = false,
 		e;
 	ctrls.classList.add('ctrls');
 	ctrlsStar.textContent = '★';
@@ -145,7 +144,7 @@ $textarea
 			var div = document.createElement('div');
 			div.classList.add('comment');
 			if (data.deleted) div.classList.add('deleted');
-			div.innerHTML = username ? markdown(data.body).replaceAll('@' + username + ' ', '&lt;span class="mention">@' + username + '&lt;/span>') : markdown(data.body);
+			div.innerHTML = username ? markdown(data.body).replace(new RegExp('@' + username + '(\\W)', 'g'), '&lt;span class="mention">@' + username + '&lt;/span>$1') : markdown(data.body);
 			if (data.event == 'init') {
 				var imgs = div.getElementsByTagName('img'),
 					i = imgs.length;
@@ -196,7 +195,7 @@ $textarea
 			var msg = document.getElementById(data.id),
 				msgCsig = msg.getElementsByClassName('c-sig')[0],
 				msgCtrls = msg.getElementsByClassName('ctrls')[0];
-			msg.innerHTML = username ? markdown(data.body).replaceAll('@' + username + ' ', '&lt;span class="mention">@' + username + '&lt;/span> ') : markdown(data.body);
+			msg.innerHTML = username ? markdown(data.body).replace(new RegExp('@' + username + '(\\W)', 'g'), '&lt;span class="mention">@' + username + '&lt;/span>$1') : markdown(data.body);
 			msg.appendChild(msgCsig);
 			msg.appendChild(msgCtrls);
 		} else if (data.event == 'delete') {
@@ -245,7 +244,7 @@ $textarea
 				}
 				div.id = data.id + 's';
 				div.classList.add('comment');
-				div.innerHTML = username ? markdown(data.body).replaceAll('@' + username, '&lt;span class="mention">@' + username + '&lt;/span>') : markdown(data.body);
+				div.innerHTML = username ? markdown(data.body).replace(new RegExp('@' + username + '(\\W)', 'g'), '&lt;span class="mention">@' + username + '&lt;/span>$1') : markdown(data.body);
 				var sig = document.createElement('span');
 				sig.classList.add('c-sig');
 				var starcount = document.createElement('span');
@@ -316,7 +315,6 @@ $textarea
 				location.hash = '';
 				location.hash = '#' + hash;
 			};
-			hashchangeready = true;
 		} else if (data.event == 'info-update') {
 			document.title = (document.getElementById('name').textContent = document.getElementById('nameedit').value = data.name) + ' | Chat | DevDoodle';
 			document.getElementById('desc').textContent = document.getElementById('descedit').value = data.desc;
@@ -402,6 +400,7 @@ $textarea
 		socket.send(JSON.stringify({event: 'info-update', name: document.getElementById('nameedit').value, desc: document.getElementById('descedit').value}));
 		return false;
 	};
+	var hashchangeready = false;
 	addEventListener('hashchange', function(e) {
 		if (hashchangeready) {
 			var hash = e.newURL.split('#', 2)[1];
